unpackaged/main/default/objects/Contract/fields/Finance_Vendor_Review_Started__c.field-meta.xml
<CustomField>
    <fullName>Finance_Vendor_Review_Started__c</fullName>
    <description>The date/time a finance vendor review was needed either for approval or automatic pre-approval</description>
    <inlineHelpText>The date/time a finance vendor review was needed either for approval or automatic pre-approval</inlineHelpText>
    <label>Finance Vendor Review Started</label>
    <type>DateTime</type>
</CustomField>