unpackaged/main/default/objects/Contract/fields/Legal_Vendor_Review_Started__c.field-meta.xml
<CustomField>
    <fullName>Legal_Vendor_Review_Started__c</fullName>
    <description>The date/time a legal vendor review was needed either for approval or automatic pre-approval</description>
    <inlineHelpText>The date/time a legal vendor review was needed either for approval or automatic pre-approval</inlineHelpText>
    <label>Legal Vendor Review Started</label>
    <type>DateTime</type>
</CustomField>