unpackaged/main/default/objects/Contract/fields/Most_Recent_Finance_Doc_Approved_Status__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Finance_Doc_Approved_Status__c</fullName>
    <defaultValue>&quot;New&quot;</defaultValue>
    <description>Most Recent Finance Doc Approved Status</description>
    <inlineHelpText>Most Recent Finance Doc Approved Status</inlineHelpText>
    <label>Most Recent Finance Doc Approved Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>