unpackaged/main/default/objects/Contract/fields/MRVenAppSt__c.field-meta.xml
<CustomField>
    <fullName>MRVenAppSt__c</fullName>
    <defaultValue>&quot;New&quot;</defaultValue>
    <description>Process builder updates text when form is submitted and when legal approves or rejects</description>
    <label>Most Recent Legal Doc Approved Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>