unpackaged/main/default/objects/Contract/fields/Procurement_Type__c.field-meta.xml
<CustomField>
    <fullName>Procurement_Type__c</fullName>
    <description>Buckets of types of procurements - drives path towards vendor document collection - legal request record creation flows</description>
    <inlineHelpText>If this contract is a Procurement please select the type.</inlineHelpText>
    <label>Procurement Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>Lease</fullName>
            </value>
            <value>
                <fullName>Materials</fullName>
            </value>
            <value>
                <fullName>Non-Consulting Services</fullName>
            </value>
            <value>
                <fullName>Hotel</fullName>
            </value>
            <value>
                <fullName>Restaurants/catering</fullName>
            </value>
            <value>
                <fullName>Copyright license</fullName>
            </value>
            <value>
                <fullName>Space rental</fullName>
            </value>
            <value>
                <fullName>Technology hardware purchase/lease</fullName>
            </value>
            <value>
                <fullName>Technology subscriptions/software</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>