unpackaged/main/default/objects/Contract/recordTypes/Procurement.recordType-meta.xml
<RecordType>
    <fullName>Procurement</fullName>
    <active>true</active>
    <description>Choose this option when New Leaders is paying for materials or a service (Cash Out).  Ex. Purchase Orders, Materials, and Consulting Contracts.</description>
    <label>Procurement</label>
</RecordType>